--- a/lab2.html
+++ b/lab2.html
@@ -77,37 +77,52 @@
         
 
         <h3>Fotos no celular</h3>
-        <img src="assets/img/fotos lab 2/celular/lucas_cel.jpg" alt="foto do Lucas (celular)" class="celular">
-        <img src="assets/img/fotos lab 2/celular/brunok_cel.jpg" alt="foto do BrunoK (celular)" class="celular">
-        <img src="assets/img/fotos lab 2/celular/brunon_cel.jpg" alt="foto do BrunoN (celular)" class="celular">
-        <img src="assets/img/fotos lab 2/celular/gabriel_cel.jpg" alt="foto do Gabriel (celular)" class="celular">
-        <img src="assets/img/fotos lab 2/celular/grupo_cel.jpg" alt="foto do grupo (celular)" class="handcam">
+        <div class="gallery">
+            <img src="assets/img/fotos lab 2/celular/lucas_cel.jpg" alt="foto do Lucas (celular)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/celular/brunok_cel.jpg" alt="foto do BrunoK (celular)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/celular/brunon_cel.jpg" alt="foto do BrunoN (celular)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/celular/gabriel_cel.jpg" alt="foto do Gabriel (celular)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/celular/grupo_cel.jpg" alt="foto do grupo (celular)" onclick="expandImage(this)">
+        </div>
+        <div id="popup" class="popup">
+            <span class="close" onclick="closePopup()">&times;</span>
+            <img class="popup-content" id="expandedImage">
+            <div id="caption"></div>
+        </div>
 
 
         <h3>Fotos na Handcam Sony</h3>
-        <img src="assets/img/fotos lab 2/filmadora pequena/lucas_peq.JPG" alt="foto do Lucas (Handcam)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora pequena/brunok_peq.JPG" alt="foto do BrunoK (Handcam)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora pequena/brunon_peq.JPG" alt="foto do BrunoN (Handcam)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora pequena/gabriel_peq.JPG" alt="foto do Gabriel (Handcam)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora pequena/grupo_peq1.JPG" alt="foto do grupo (Handcam)" class="handcam">
+        <div class="gallery">
+            <img src="assets/img/fotos lab 2/filmadora pequena/lucas_peq.JPG" alt="foto do Lucas (Handcam)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora pequena/brunok_peq.JPG"  alt="foto do BrunoK (Handcam)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora pequena/brunon_peq.JPG" alt="foto do BrunoN (Handcam)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora pequena/gabriel_peq.JPG" alt="foto do Gabriel (Handcam)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora pequena/grupo_peq1.JPG" alt="foto do grupo (Handcam)" onclick="expandImage(this)">
+        </div>
+
 
         <h3>Fotos na Filmadora Panasonic</h3>
-        <img src="assets/img/fotos lab 2/filmadora grande/lucas_grande.jpg" alt="foto do Lucas (Filmadora)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora grande/brunok_grande.jpg" alt="foto do BrunoK (Filmadora)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora grande/brunon_grande.jpg" alt="foto do BrunoN (Filmadora)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora grande/gabriel_grande.jpg" alt="foto do Gabriel (Filmadora)" class="handcam">
-        <img src="assets/img/fotos lab 2/filmadora grande/grupo_grande1.jpg" alt="foto do grupo (Filmadora)" class="handcam">
+        <div class="gallery">
+            <img src="assets/img/fotos lab 2/filmadora grande/lucas_grande.jpg" alt="foto do Lucas (Filmadora)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora grande/brunok_grande.jpg" alt="foto do BrunoK (Filmadora)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora grande/brunon_grande.jpg" alt="foto do BrunoN (Filmadora)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora grande/gabriel_grande.jpg" alt="foto do Gabriel (Filmadora)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/filmadora grande/grupo_grande1.jpg" alt="foto do grupo (Filmadora)" onclick="expandImage(this)">
+        </div>
 
         <h3>Composições</h3>
-        <img src="assets/img/fotos lab 2/composição/lucas_avatar.jpg" alt="foto do Lucas (composta)" class="handcam">
-        <img src="assets/img/fotos lab 2/composição/brunok_avatar.jpg" alt="foto do BrunoK (composta)" class="handcam">
-        <img src="assets/img/fotos lab 2/composição/brunon_avatar.jpg" alt="foto do BrunoN (composta)" class="handcam">
-        <img src="assets/img/fotos lab 2/composição/gabriel_avatar.jpg" alt="foto do Gabriel (composta)" class="handcam">
-        <img src="assets/img/fotos lab 2/composição/grupo_avatar.jpg" alt="foto do grupo (composta)" class="handcam">
+        <div class="gallery">
+            <img src="assets/img/fotos lab 2/composição/lucas_avatar.jpg" alt="foto do Lucas (composta)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/composição/brunok_avatar.jpg" alt="foto do BrunoK (composta)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/composição/brunon_avatar.jpg" alt="foto do BrunoN (composta)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/composição/gabriel_avatar.jpg" alt="foto do Gabriel (composta)" onclick="expandImage(this)">
+            <img src="assets/img/fotos lab 2/composição/grupo_avatar.jpg" alt="foto do grupo (composta)" onclick="expandImage(this)">
+        </div>
 
         <h3>Storyboard</h3>
-        <img src="assets/img/fotos lab 2/storyboard.png" alt="Storyboard" class="storyboard">
-        <p>Alt: Storyboard do vídeo</p>
+        <div class="gallery">
+            <img src="assets/img/fotos lab 2/storyboard.png" alt="Storyboard do vídeo" onclick="expandImage(this)">
+        </div>
 
         <h3>Vídeo final</h3>
         <div class="video-container">
@@ -119,72 +134,90 @@
 
         <h2>Processamento de imagens com OpenCV</h2>
         <h3>Fotos no celular (escala de cinza)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_cel_gray2.png" alt="foto do Lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_cel_gray.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_cel_gray2.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_cel_gray2.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_cel_gray2.png" alt="foto do grupo" class="handcam">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_cel_gray2.png" alt="foto do Lucas (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_cel_gray.png" alt="foto do Gabriel (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_cel_gray2.png" alt="foto do BrunoK (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_cel_gray2.png" alt="foto do BrunoN (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_cel_gray2.png" alt="foto do grupo (escala de cinza)" onclick="expandImage(this)">
+    </div>
 
         <h3>Fotos no celular (escala de cinza redimensionado)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_cel_gray3.png" alt="foto do Lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_cel_gray2.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_cel_gray3.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_cel_gray3.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_cel_gray3.png" alt="foto do grupo" class="handcam">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_cel_gray3.png" alt="foto do Lucas (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_cel_gray2.png" alt="foto do Gabriel (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_cel_gray3.png" alt="foto do BrunoK (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_cel_gray3.png" alt="foto do BrunoN (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_cel_gray3.png" alt="foto do grupo (escala de cinza redimensionado)" onclick="expandImage(this)">
+    </div>
 
         <h3>Fotos na Handcam Sony (escala de cinza)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_peq_gray2.png" alt="foto do Lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_peq_gray2.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_peq_gray2.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_peq_gray.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_peq_gray2.png" alt="foto do grupo" class="celular">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_peq_gray2.png" alt="foto do Lucas (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_peq_gray2.png" alt="foto do Gabriel (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_peq_gray2.png" alt="foto do BrunoK (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_peq_gray.png" alt="foto do BrunoN (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_peq_gray2.png" alt="foto do grupo (escala de cinza)" onclick="expandImage(this)">
+    </div>
 
         <h3>Fotos na Handcam Sony (escala de cinza redimensionado)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_peq_gray3.png" alt="foto do Lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_peq_gray3.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_peq_gray3.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_peq_gray3.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_peq_gray3.png" alt="foto do grupo" class="celular">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_peq_gray3.png" alt="foto do Lucas (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_peq_gray3.png" alt="foto do Gabriel (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_peq_gray3.png" alt="foto do BrunoK (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_peq_gray3.png" alt="foto do BrunoN (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_peq_gray3.png" alt="foto do grupo (escala de cinza redimensionado)" onclick="expandImage(this)">
+    </div>
 
         <h3>Fotos na Filmadora Panasonic (escala de cinza)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_grande_gray1.png" alt="foto do Lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_grande_gray2.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_grande_gray2.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_grande_gray2.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_grande_gray2.png" alt="foto do grupo" class="celular">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_grande_gray1.png" alt="foto do Lucas (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_grande_gray2.png" alt="foto do Gabriel (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_grande_gray2.png" alt="foto do BrunoK (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_grande_gray2.png" alt="foto do BrunoN (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_grande_gray2.png" alt="foto do grupo (escala de cinza)" onclick="expandImage(this)">
+    </div>
 
         <h3>Fotos na Filmadora Panasonic (escala de cinza redimensionado)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_grande_gray2.png" alt="foto do Lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_grande_gray3.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_grande_gray3.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_grande_gray3.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_grande_gray3.png" alt="foto do grupo" class="celular">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_grande_gray2.png" alt="foto do Lucas" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_grande_gray3.png" alt="foto do Gabriel" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_grande_gray3.png" alt="foto do BrunoK" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_grande_gray3.png" alt="foto do BrunoN" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_grande_gray3.png" alt="foto do grupo" onclick="expandImage(this)">
+    </div>
 
         <h3>Composições (escala de cinza)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_avatar_gray2.png" alt="foto do lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_avatar_gray3.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_avatar_gray3.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_avatar_gray3.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_avatar_gray3.png" alt="foto do grupo" class="celular">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_avatar_gray2.png" alt="composição do lucas (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_avatar_gray3.png" alt="composição do Gabriel (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_avatar_gray3.png" alt="composição do BrunoK (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_avatar_gray3.png" alt="composição do BrunoN (escala de cinza)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_avatar_gray3.png" alt="composição do grupo (escala de cinza)" onclick="expandImage(this)">
+    </div>
 
         <h3>Composições (escala de cinza redimensionado)</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_avatar_gray2.png" alt="foto do lucas" class="celular">
-        <img src="assets/img/fotos lab 2/edit/gabriel_avatar_gray3.png" alt="foto do Gabriel" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunok_avatar_gray3.png" alt="foto do BrunoK" class="celular">
-        <img src="assets/img/fotos lab 2/edit/brunon_avatar_gray3.png" alt="foto do BrunoN" class="celular">
-        <img src="assets/img/fotos lab 2/edit/grupo_avatar_gray3.png" alt="foto do grupo" class="celular">
+        <div class="gallery">
+        <img src="assets/img/fotos lab 2/edit/lucas_avatar_gray2.png" alt="composição do lucas (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/gabriel_avatar_gray3.png" alt="composição do Gabriel (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunok_avatar_gray3.png" alt="composição do BrunoK (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/brunon_avatar_gray3.png" alt="composição do BrunoN (escala de cinza redimensionado)" onclick="expandImage(this)">
+        <img src="assets/img/fotos lab 2/edit/grupo_avatar_gray3.png" alt="composição do grupo (escala de cinza redimensionado)" onclick="expandImage(this)">
+    </div>
 
         <h3>Comentários e conclusões</h3>
         <p class="resumo">Neste laboratório realizamos uma introdução ao tratamento de imagens com opencv e obtivemos algumas noções sobre como gravar e obter fotografias, 
             tanto na preparação, com o storyboard e a importância da luminosidade (que será melhor abordado no próximo laboratório), como na prática, com o manuseio das câmeras.
         </p>
         <p class="resumo"></p>
+        
     </main>
 
     <footer>
         <p>Página confeccionada para a disciplina de Codificação de Sinais Multimidia 2024.3</p>
         <p>Professor: Mário Minami</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
